--- a/CatalogViewer/Properties/Resources.resx
+++ b/CatalogViewer/Properties/Resources.resx
@@ -118,6 +118,12 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="noimageavailable.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\noimageavailable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="noimageavailable_100.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\noimageavailable_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="richemontlogo_aim" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\richemontlogo_aim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
