--- a/CatalogViewer/Properties/Resources.resx
+++ b/CatalogViewer/Properties/Resources.resx
@@ -118,13 +118,55 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="B_M.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\B&amp;M.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Cartier.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Cartier.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="chloe.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\chloe.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="dunhill.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\dunhill.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="iwc_logo.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\iwc-logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="JLC_Logo_Black.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\JLC-Logo-Black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="lange_and_sohne_logo.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\lange_and_sohne_logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="logo_RD.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\logo_RD.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Mont_Blanc.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Mont Blanc.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="noimageavailable.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\noimageavailable.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="noimageavailable_100.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\noimageavailable_100.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Panerai_Logo.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Panerai_Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Piaget_Logo_Black.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Piaget-Logo-Black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="richemontlogo_aim" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\images\richemontlogo_aim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="richemontlogo_aim1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\richemontlogo_aim.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="Vacheron_Logo.png" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\Vacheron_Logo.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="VCA_Logo_Black" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\images\VCA Logo Black.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
